Hero left container spacing fixed

--- a/frontend/src/App/styles/base/_typography.scss
+++ b/frontend/src/App/styles/base/_typography.scss
@@ -147,7 +147,7 @@
     &--welcome {
       font-size: var(--text-size-0);
       font-weight: inherit;
-      transform: translate(-0.2rem, -1rem);
+      transform: translate(-0.2rem, -.4rem);
       letter-spacing: 0.4rem;
 
       @media (max-width: 600px) {
